refactor: project 생성 테스트 코드에 thumbnail 추가